--- a/Unidad5/EjerciciosUD5/pom.xml
+++ b/Unidad5/EjerciciosUD5/pom.xml
@@ -26,5 +26,12 @@
             </plugin>
         </plugins>
     </build>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.34</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 </project>
