--- a/Unidad6/EjerciciosUD6/pom.xml
+++ b/Unidad6/EjerciciosUD6/pom.xml
@@ -52,6 +52,9 @@
                             <version>1.18.36</version>
                         </path>
                     </annotationProcessorPaths>
+                    <source>23</source>
+                    <target>23</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
